--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17404,3 +17404,48 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 5 Brands";
   font-weight: 400;
 }
+
+.router-link-exact-active {
+  background-color: #0562db;
+  color: white;
+}
+
+.blue {
+  color: #0d6efd;
+}
+
+.indigo {
+  color: #6610f2;
+}
+
+.purple {
+  color: #6f42c1;
+}
+
+.pink {
+  color: #d63384;
+}
+
+.red {
+  color: #dc3545;
+}
+
+.orange {
+  color: #fd7e14;
+}
+
+.yellow {
+  color: #ffc107;
+}
+
+.green {
+  color: #198754;
+}
+
+.teal {
+  color: #20c997;
+}
+
+.cyan {
+  color: #0dcaf0;
+}
